# TAU

./: .gitignore
Labolatoria 1/: package-lock.json  package.json  zad1.js
Labolatoria 1/test/: zad1Test.js
Labolatoria 2/: README.md  data.json  package-lock.json  package.json  zadanie2.js
Labolatoria 3/: README.md  data.json  package-lock.json  package.json  zadanie3.js
Labolatoria 3/mochawesome-report/: mochawesome.html  mochawesome.json
Labolatoria 4/: exercise_1.py  pyproject.toml  test_exercise1.py
Labolatoria 5/: calculator.py  calculator_test.py
Labolatoria 6/: test.js
