[tool.poetry]
name = "bsi_reliability"
version = "0.1.0"
description = ""
authors = ["Jedrzej Szadejko <jendziu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pylint = "^2.12.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
